<resources>
    <string name="app_name">Todo</string>

    //----------- Home Fragment ----------------
    <string name="home_fragment_label">Home</string>
    <string name="dummmy_list_title">Title</string>
    <string name="dummy_item">Item 1</string>
    <string name="dummy_list_owner">Owner: JDoe</string>
    <string name="dummy_list_timestamp">mm/dd/yyy hh:mm:ss</string>
    <string name="profile_icon">Profile</string>
    <string name="share_icon">Share</string>
    <string name="home_icon_holder">Menu</string>

    //----------- Splash Fragment----------------
    <string name="splash_fragment_label">Splash</string>
    <string name="loading_text">Loading...</string>

    //---------- General Setup ----------
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>

    //----------- User Name Setup ----------------
    <string name="user_name_setup_fragment_label">User Name Setup</string>
    <string name="dummy_username">John Doe</string>

    //---------- Customization ----------
    <string name="customization_fragment_label">Customization</string>
    <string-array name="custom_themes_array">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
    </string-array>
    <string name="setup_themes_label">Choose Theme</string>
    <string name="dummy_spinner_text">Color</string>
    <string name="setup_profile_visibility">Profile Visibility</string>

    //---------- Profile Visibility ----------
    <string name="profile_public">Public</string>
    <string name="profile_private">Private</string>

    //---------- Profile Image ----------
    <string name="profile_image_fragment_label">Profile Image</string>
    <string name="choose_image_button">Choose Image</string>

    //---------- List Fragment ----------
    <string name="list_fragment_label">List</string>
    <string name="list_new_item_hint">New Item</string>
    <string name="list_uncheck_all">Uncheck All</string>
    <string name="dummy_item_text">Item</string>

    //---------- Profile Fragment ----------
    <string name="profile_fragment_label">Profile</string>
</resources>