<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_nav"
    app:startDestination="@id/nav_splash">

    <fragment
        android:id="@+id/nav_home"
        android:name="professorchaos0802.todo.ui.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_splash"
        android:name="professorchaos0802.todo.ui.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/nav_user_name_setup"
        android:name="professorchaos0802.todo.ui.UserNameSetupFragment"
        android:label="@string/user_name_setup_fragment_label"
        tools:layout="@layout/fragment_user_name_setup" />

    <fragment
        android:id="@+id/nav_customization"
        android:name="professorchaos0802.todo.ui.CustomizationFragment"
        android:label="@string/customization_fragment_label"
        tools:layout="@layout/fragment_customization" />




</navigation>