<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground">

    <EditText android:id="@+id/user_name_setup_edit_text"
        style="@style/setup_edit_text"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/dummy_username" />

    <Button android:id="@+id/user_name_next_button"
        style="@style/setup_next_cancel_button"
        android:text="@string/next_button"
        android:layout_alignStart="@id/user_name_setup_edit_text"/>

    <Button android:id="@+id/user_name_cancel_button"
        style="@style/setup_next_cancel_button"
        android:text="@string/cancel_button"
        android:layout_alignEnd="@id/user_name_setup_edit_text"/>

</RelativeLayout>